Pueba de configuración ssh

--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
   <p>
     El comando para instalar react.js es: npx create-react-app test
   </p>
+  <p>
+    Cuando se está trabajando sobre Linux Subsystem for Windows es necesario hacer nuevas contraseñas ssh para interactuar con git y github
+  </p>
 </body>
 </html>
